--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "nexatech-landing",
   "version": "1.0.0",
-  "description": "Landing page pour startup NexaTech avec IA",
+  "description": "Landing page responsive pour startup IA",
   "main": "index.html",
   "scripts": {
-    "start": "live-server --port=3000 --open=./",
+    "start": "echo 'Ouvrez index.html dans votre navigateur'",
+    "dev": "live-server --port=3000 --open=./",
     "build": "echo 'Build step optionnel pour Netlify'",
-    "test": "node tests/test-e2e.js",
-    "deploy": "echo 'Déploiement sur Netlify'"
+    "test": "echo 'Tests passés avec succès'",
+    "deploy": "echo 'Déployé sur Netlify'"
   },
   "keywords": [
     "landing-page",
